--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,7 +11,7 @@ body {
   width: 780px;
   border-radius: 20px;
   padding: 35px 40px;
-  background-color: black;
+  background-color: #000;
 }
 
 .container header {
@@ -72,6 +72,7 @@ header .column span {
   display: flex;
   margin-top: 40px;
 }
+
 .piano-keys .key {
   cursor: pointer;
   user-select: none;
@@ -99,7 +100,7 @@ header .column span {
   background: linear-gradient(#333, #000);
 }
 
-.piano-keys span {
+.piano-keys span{
   position: absolute;
   bottom: 20px;
   width: 100%;
@@ -108,12 +109,14 @@ header .column span {
 }
 
 .piano-keys .white.active {
-  box-shadow: inset -5px 5px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: inset -5px 5px 20px
+  rgba(0, 0, 0, 0.2);
   background: linear-gradient(to bottom #fff 0%, #eee 100%);
 }
 
 .piano-keys .black.active {
-  box-shadow: inset -5px 5px 10px rgba(255, 255, 255, 0.1);
+  box-shadow: inset -5px 5px 10px
+  rgba(255, 255, 255, 0.1);
   background: linear-gradient(to bottom #000, #434343);
 }
 
